--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -367,8 +367,10 @@ elseif (FMT_UNICODE)
   # Unicode support requires compiling with /utf-8.
   target_compile_options(fmt PUBLIC $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CXX_COMPILER_ID:MSVC>>:/utf-8>)
   target_compile_options(fmt-header-only INTERFACE $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CXX_COMPILER_ID:MSVC>>:/utf-8>)
+  
 else ()
   target_compile_definitions(fmt PUBLIC FMT_UNICODE=0)
+  target_compile_definitions(fmt-header-only INTERFACE FMT_UNICODE=0)
 endif ()
 
 target_compile_definitions(fmt-header-only INTERFACE FMT_HEADER_ONLY=1)
